# Echo_StockSolution_Manager

./: .gitignore  Prototype.ipynb  README.md  RUN.sh  app.pid  main.py  netlify.toml  pyproject.toml  requirements.txt  test_api.py  test_nonsequential.py  windsurf_deployment.yaml
Proto/Plate_Layoutting/: CherryPick.csv  Notebook.ipynb  Reactions_Products.csv  Signals_Notebook.ipynb  Ugi_4CR_reaction.rxn
backend/: main.py
data/: Example.csv  chemical_groups.json  chemical_groups.txt  master.csv  master_Amines.csv  merge_history.csv  users.json
frontend/: app.py
src/backend/: main.py
src/frontend/: app.py  auth.py  manage_users.py  password_hasher.py
tests/data/: test_new_amines.csv  test_non_sequential_amines.csv  test_sequential_amines.csv
