[project]
name = "web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamol>=0.12.5",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "rdkit>=2024.9.6",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.1",
]
