[project]
name = "Echo_StockSolution_Manager"
version = "0.1.0"
description = "Chemical Groups Management System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datamol>=0.12.5",
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "rdkit>=2024.9.6",
    "streamlit>=1.44.1",
    "uvicorn>=0.34.1",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "plotly>=5.20.0",
    "notebook>=7.4.0",
]
